add point data and point provider